web/wwwroot/css/site.css
html {
    font-size: 14px;
    position: relative;
    min-height: 100%;
}

@media (min-width: 768px) {
    html {
        font-size: 16px;
    }

    #mainLayoutHeader {
        min-height: 86px;
    }

    #mainLeftDrawer {
        min-width: 300px;
    }
}

.btn:focus,
.btn:active:focus,
.btn-link.nav-link:focus,
.form-control:focus,
.form-check-input:focus {
    box-shadow:
        0 0 0 0.1rem white,
        0 0 0 0.25rem #258cfb;
}

/*Placeholders used when loading*/
#headerPlaceholder {
    height: 50px;
    background-color: #022851; /* ucdavis-blue-100 */
}
#topPlaceholder {
    height: 50px;
}
#mainNavPlaceholder {
    height: 50px;
    background-color: #1d4776; /* ucdavis-blue-80 */
}

/*Top nav/header styles*/
#mainLayoutHeader {
    background-color: #022851; /* ucdavis-blue-100 */
}

.mainLayoutViper {
    font-family: Roboto;
    font-size: 1.6em !important;
    font-weight: normal;
    vertical-align: bottom;
    margin-left: 0.6em;
}

.mainLayoutViperPlaceholder {
    margin-left: 10px;
    height: 24px;
}

.mainLayoutViperMode {
    margin-left: 0.6em;
    margin-top: 0.4em;
    color: red;
    vertical-align: bottom;
}

#topPlaceholder {
    padding: 0 12px;
}

#mainLayoutHeaderSections {
    background-color: #ffd24c; /* ucdavis-gold-70 */
    min-height: 36px;
    border-bottom: 1px solid silver;
}

#mainLayoutHeaderSections .selectedTopNav {
    background-color: #ffe599; /* ucdavis-gold-40 */
}

/*Left Nav styles*/
#leftNavMenu h2 {
    font-size: 1.2rem;
    margin: 0;
    line-height: 1.5rem;
    padding: 0.2rem 0.5rem 0.1rem 0.5rem;
    font-weight: bold;
}

#leftNavMenu .leftNavHeader {
    font-weight: bold;
    font-size: 1rem;
    padding: 1rem 0.5rem 0.1rem 0.5rem;
}

#leftNavMenu .leftNavSpacer {
    border: 0;
}

#leftNavMenu .leftNavLink {
    padding-left: 0.5rem;
}

#leftNavMenu .leftNavActive {
    background-color: #cdd6e0; /* ucdavis-blue-10 */
    color: #022851; /* ucdavis-blue-100 */
    font-weight: 500;
}

/*Footer styles*/
#footerNavLinks a {
    text-decoration: none;
}

#footerNavLinks a:hover {
    text-decoration: underline;
}

.sticky-header-table {
    /* height or max-height is important */
    height: 600px;
}

[v-cloak] {
    display: none;
}

.q-table__top,
.q-table__bottom,
.q-table__middle table thead tr:first-child th {
    /* bg color is important for th; just specify one */
    background-color: #eee;
    white-space: nowrap;
}

.q-table__container {
    margin-bottom: 1.5rem;
}

.sticky-header-table .q-table__middle table thead tr th {
    position: sticky;
    z-index: 1;
}

.sticky-header-table .q-table__middle table thead tr:first-child th {
    top: 0;
}

/* this is when the loading indicator appears */
.q-table--loading thead tr:last-child th {
    /* height of all previous header rows */
    top: 48px;
}

/* prevent scrolling behind sticky top row on focus */
.sticky-header-table .q-table__middle table tbody {
    /* height of all previous header rows */
    scroll-margin-top: 48px;
}

/* fallback */
@font-face {
    font-family: "Material Icons";
    font-style: normal;
    font-weight: 400;
    src: url(https://fonts.gstatic.com/s/materialicons/v140/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format("woff2");
}

.material-icons {
    font-family: "Material Icons";
    font-weight: normal;
    font-style: normal;
    font-size: 24px;
    line-height: 1;
    letter-spacing: normal;
    text-transform: none;
    display: inline-block;
    white-space: nowrap;
    word-wrap: normal;
    direction: ltr;
    -webkit-font-feature-settings: "liga";
    -webkit-font-smoothing: antialiased;
}

/* Heading Styles */
.q-page-container h1,
.q-page-container .text-h1 {
    font-size: 1.2rem;
    line-height: 1.2rem;
    margin: 0rem 0rem 1rem 0rem;
    font-weight: bold;
}

.q-page-container h2,
.q-page-container .text-h2 {
    font-size: 1.2rem;
    line-height: 1.2rem;
    margin: 0rem 0rem 1rem 0rem;
    font-weight: bold;
}

.q-page-container h3,
.q-page-container .text-h3 {
    font-size: 1.2rem;
    line-height: 1.2rem;
    margin: 0rem 0rem 0.5rem 0rem;
    font-weight: bold;
}

.q-page-container h4,
.q-page-container .text-h4 {
    font-size: 1.1rem;
    line-height: 1.1rem;
    margin: 0rem 0rem 0.5rem 0rem;
    font-weight: bold;
}

.q-page-container h5,
.q-page-container .text-h5 {
    font-size: 1rem;
    line-height: 1rem;
    margin: 0rem 0rem 0.5rem 0rem;
    font-weight: bold;
}

.q-page-container h6,
.q-page-container .text-h6 {
    font-size: 1rem;
    line-height: 1rem;
    margin: 0rem 0rem 0.5rem 0rem;
}

.q-avatar .smallPhoto {
    height: 40px !important;
    width: 31px !important;
}

div#directoryResults .q-avatar {
    height: 111px !important;
    width: 87px !important;
}

header .q-avatar {
    height: 40px !important;
    width: 31px !important;
}

